--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html ${htmlAttrs}>
   <head>
     ${head}
+
+    <script async defer data-domain="rasulkireev.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body ${bodyAttrs}>
     ${app}
