--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html ${htmlAttrs}>
   <head>
     ${head}
-
-    <script async defer data-domain="rasulkireev.com" src="https://plausible.io/js/plausible.js"></script>
+    <script async defer data-domain="rasulkireev.com" src="https://stats.rasulkireev.com/js/index.js"></script>
   </head>
   <body ${bodyAttrs}>
     ${app}
