--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     ${head}
     <script async defer data-domain="rasulkireev.com" src="https://stats.rasulkireev.com/js/index.js"></script>
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
   </head>
   <body ${bodyAttrs}>
     ${app}
